--- a/CarRentTest/CarRentTest/CarRentTest.csproj
+++ b/CarRentTest/CarRentTest/CarRentTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CustomerTest.cs" />
+    <Compile Include="SportsCarTest_Theo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CarRent\CarRent.csproj">
