--- a/CarRentTest/CarRent/CarRent.csproj
+++ b/CarRentTest/CarRent/CarRent.csproj
@@ -49,16 +49,19 @@
     <Compile Include="Classes\Car.cs" />
     <Compile Include="Classes\Customer.cs" />
     <Compile Include="Classes\FamilyCar.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="ChooseCar.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ChooseCar.Designer.cs">
+      <DependentUpon>ChooseCar.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\Rent.cs" />
     <Compile Include="Classes\SportCar.cs" />
+    <EmbeddedResource Include="ChooseCar.resx">
+      <DependentUpon>ChooseCar.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
