--- a/CarRentTest/CarRent/CarRent.csproj
+++ b/CarRentTest/CarRent/CarRent.csproj
@@ -65,6 +65,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\Rent.cs" />
     <Compile Include="Classes\SportCar.cs" />
+    <Compile Include="ReturnCar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReturnCar.Designer.cs">
+      <DependentUpon>ReturnCar.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -80,6 +86,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ReturnCar.resx">
+      <DependentUpon>ReturnCar.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
